[tool.poetry]
name = "longmemeval-integration"
version = "0.1.0"
description = "Clean LongMemEval integration with Mycelian Memory"
authors = ["Mycelian Team"]
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langgraph = ">=0.2.0"
langchain = ">=0.3.0"
langchain-openai = ">=0.2.0"
langchain-aws = ">=0.1.0"
langchain-google-vertexai = ">=0.2.0"
langchain-mcp-adapters = ">=0.1.0"
google-cloud-aiplatform = ">=1.38.0"
pandas = ">=2.0.0"
python-dotenv = ">=1.0.0"
click = ">=8.0.0"
huey = ">=2.0.0"
rich = ">=13.0.0"
toml = ">=0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
